mod_unilabel: Fix new Font Awesome caret in collapsed text

--- a/type/collapsedtext/styles.css
+++ b/type/collapsedtext/styles.css
@@ -1,6 +1,11 @@
 span.unilabeltype-collapsed-caret:after {
     content: "\f0d7";
-    font: normal normal normal 16px/1 "Font Awesome 6 Free";
+    font-weight: 900;
+    font-style: normal;
+    font-variant: normal;
+    line-height: 1;
+    text-rendering: auto;
+    font-family: "Font Awesome 6 Free";
 }
 
 a.unilabel-title.collapsed span.unilabeltype-collapsed-caret::after {
